--- a/.gitignore
+++ b/.gitignore
@@ -6,20 +6,25 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-.env
 
 node_modules
-.env
 dist
 dist-ssr
 *.local
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
-.env
 *.suo
 *.ntvs*
 *.njsproj
